FIX test: UnsupportedOperationException with immutable lists, now solved