@@ -30,6 +30,7 @@ import java.util.Collections;
 import java.util.List;
 import java.util.Objects;
 import java.util.function.Function;
+import java.util.stream.Collectors;
 import java.util.stream.IntStream;
 import java.util.stream.Stream;
 
@@ -139,7 +140,7 @@ public class BoardTest {
     @NotNull
     public static Stream<Coordinates> getNEmptyPositionsRandomlyTakenFromGivenBoard(
             int numberOfEmptyCellsToOccupy, @NotNull final Board board) {   // TODO: test
-        List<Coordinates> coordinatesList = Objects.requireNonNull(board).getStreamOfEmptyCoordinates().toList();
+        List<Coordinates> coordinatesList = Objects.requireNonNull(board).getStreamOfEmptyCoordinates().collect(Collectors.toList());
         Collections.shuffle(coordinatesList);
         return coordinatesList.stream().limit(numberOfEmptyCellsToOccupy);
     }
